fix scrollbar desktop + layout footer desktop

--- a/style.css
+++ b/style.css
@@ -35,14 +35,18 @@
 
 body {
   font-family: 'Raleway', sans-serif;
-  margin: 0 auto;
-  max-width: 1440px;
+  margin: 0;
 }
 
 .page {
   height: 100vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1440px;
 }
 
 section,
@@ -562,7 +566,7 @@ footer li {
 }
 
 @media screen and (min-width: 768px) {
-  footer {
+  footer .container {
     display: flex;
     justify-content: space-between;
   }
